# MM-TickTick-agent

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  REFLECTION.md  compose.yaml  config.local.example.json  pyproject.toml  ticktick_open_api_codex_guide.md
app/: __init__.py  __main__.py
app/agents/: clarify.py
app/chat/: prompts.py  session.py
app/cli/: commands.py  context.py  debug.py  session.py
app/config/: __init__.py  setup.py
app/domain/: models.py
app/llm/: openrouter.py  tools.py
app/providers/mock/: __init__.py  ticktick.py
app/providers/ticktick/: __init__.py  api.py  base.py  client.py  dates.py  mapper.py  oauth.py  project_refs.py  projects.py  tasks.py
app/services/: provider_factory.py
app/storage/: config_store.py
app/tools/: base.py  handlers.py  presenter.py  registry.py  task_search.py
app/tools/specs/: ticktick_tools.json
app/utils/: json.py  timezone.py
tests/: test_chat_session.py  test_clarify.py  test_config.py  test_mock_ticktick_provider.py  test_openrouter_client.py  test_ticktick_oauth.py  test_ticktick_provider.py  test_tool_loop.py  test_tools.py
